--- a/TheTaleProject/TheTale/src/main/AndroidManifest.xml
+++ b/TheTaleProject/TheTale/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:theme="@style/FullscreenTheme" >
+        </activity>
+        <activity android:name="org.thetale.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
